# m3upipe

./: .dockerignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  techstack.md  techstack.yml  uwsgi.ini
